--- a/OracleJETApplication/templates/labor.tmpl.html
+++ b/OracleJETApplication/templates/labor.tmpl.html
@@ -11,24 +11,23 @@
     <div class="oj-row">
         <div class="oj-sm-12 oj-col" data-bind="visible: sectionsState">
             <div id="laborTabs" data-bind="ojComponent: {component: 'ojNavigationList', selection: router.stateId(), beforeSelect: selectHandler, drillMode: 'none'}">
-                <ul data-bind="foreach: navDataSource">
+                <ul data-bind="foreach: router.states">
                     <li data-bind="attr: {id: id}, click: $parent.toggleSections">
-                        <a data-bind="text: name"></a>
+                        <a data-bind="text: label"></a>
                     </li>
                 </ul>
             </div>
         </div>
-        <!-- dialog for change location  -->
-        <div id="dialogWrapper">
-            <div data-bind="template: {name: 'labor/schedules-timecards/changedialog'}"></div>
-        </div>
         <div class="oj-sm-12 oj-col" data-bind="if: router.stateId()">
             <div class="oj-panel tab-content" data-bind="with: router.currentState()">
+
                 <div data-bind="template: {name: 'labor/' + id +'/' + id + '-small'}"></div>
             </div>
         </div>
     </div>
 </div>
+<!--Labor dialog modal-->
+<div data-bind="template: {name: 'labor/dialogwindow/dialogwindow-small'}"></div>
 </script>
 
 <!-- large template -->
@@ -42,9 +41,9 @@
         <div id="laborSectionTabs" class="oj-md-12 oj-col">
             <div data-bind="ojComponent: {component: 'ojConveyorBelt'}">  
                 <div id="laborTabs" data-bind="ojComponent: {component: 'ojNavigationList', selection: router.stateId(), beforeSelect: selectHandler, drillMode: 'none', edge: 'top'}">
-                    <ul data-bind="foreach: navDataSource">
-                        <li id="id" data-bind="attr: {id: id}">
-                            <a data-bind="text: name"></a>
+                    <ul data-bind="foreach: router.states">
+                        <li data-bind="attr: {id: id}">
+                            <a data-bind="text: label"></a>
                         </li>
                     </ul>
                 </div>
@@ -56,10 +55,13 @@
                 <div data-bind="template: {name: 'labor/' + id +'/' + id + '-large'}"></div>
         </div>
     </div>
-
+<!--Labor dialog modal-->
+<div data-bind="template: {name: 'labor/dialogwindow/dialogwindow-large'}"></div>
 </script>
+    
+
 
 <div id="templateWrapper" class="templateArea" data-bind="template: {name: $root.medium() ? 'md_lg_xl_template' : 'sm_template'}"></div>
 <!-- dialog for change location  -->
 
- <div data-bind="template: {name: 'labor/dialogwindow/dialogwindow-large'}"></div>
+
