--- a/OracleJETApplication/templates/labor/overview/overview-large.tmpl.html
+++ b/OracleJETApplication/templates/labor/overview/overview-large.tmpl.html
@@ -1,9 +1,8 @@
 <div class="tbd">Content TBD
      -large
-     
-        <div data-bind="text: $parent.region"></div>
-        <div data-bind="text: $parent.locID"></div>
-        <div data-bind="text: $parent.storeName"></div>
+
+<a data-bind="click: function(){$parent.handleOpen('#laborDialogWindow')}" style="line-height:39px;">edit <i class="fa fa-pencil-square-o"></i></a>
+
 
 </div>
 
