--- a/OracleJETApplication/templates/labor/overview/overview-small.tmpl.html
+++ b/OracleJETApplication/templates/labor/overview/overview-small.tmpl.html
@@ -1,5 +1,6 @@
 <div class="tbd">Content TBD
     -small
+    <a data-bind="click: function(){$parent.handleOpen('#laborDialogWindow')}" style="line-height:39px;">edit <i class="fa fa-pencil-square-o"></i></a>
 </div>
 
 
