new updates to scss files and template

--- a/OracleJETApplication/templates/profile/profile/profile-large.tmpl.html
+++ b/OracleJETApplication/templates/profile/profile/profile-large.tmpl.html
@@ -64,7 +64,7 @@
             <div class="oj-col oj-md-6">
                 <div class="contactColumn">
                     <h4>Email Address</h4>
-                    <a style="font-weight: bold;" data-bind="attr:{href: $parent.getEmail($data)}, text: $parent.email() + '@example.net'"></a><i class="fa fa-envelope"></i>
+                    <a style="font-weight: bold;" data-bind="attr:{href: $parent.getEmail($data)}, text: $parent.email()"></a><i class="fa fa-envelope"></i>
                     <div data-bind="visible: $parent.receiveEmailNotification() == 1">
                         <div><i class="fa fa-check"></i> Receive email notifications</div>
                     </div>
