updated alot of files and changes

--- a/OracleJETApplication/templates/enterprise.tmpl.html
+++ b/OracleJETApplication/templates/enterprise.tmpl.html
@@ -36,6 +36,8 @@
             </div>
         </div>
     </div>
+<!--enterprise dialog modal-->
+<div data-bind="template: {name: 'enterprise/dialogwindow/dialogwindow-small'}"></div>
 </script>
 
 <!-- large template -->
@@ -71,6 +73,8 @@
             </footer>
         </div>
     </div>
+<!--enterprise dialog modal-->
+<div data-bind="template: {name: 'enterprise/dialogwindow/dialogwindow-large'}"></div>
 </script>
 
 <div id="templateWrapper" class="templateArea" data-bind="template: {name: $root.medium() ? 'md_lg_xl_template' : 'sm_template'}"></div>
