--- a/OracleJETApplication/templates/enterprise/overview/overview-large.tmpl.html
+++ b/OracleJETApplication/templates/enterprise/overview/overview-large.tmpl.html
@@ -1,4 +1,5 @@
 <div class="tbd">Content TBD
 
      -large
+            <a data-bind="click: function(){$parent.handleOpen('#enterpriseDialogWindow')}" style="line-height:39px;">edit <i class="fa fa-pencil-square-o"></i></a>
 </div>
