--- a/OracleJETApplication/templates/gift-loyalty.tmpl.html
+++ b/OracleJETApplication/templates/gift-loyalty.tmpl.html
@@ -36,6 +36,8 @@
             </div>
         </div>
     </div>
+<!--gift-loyalty dialog modal-->
+<div data-bind="template: {name: 'gift-loyalty/dialogwindow/dialogwindow-small'}"></div>
 </script>
 
 <!-- large template -->
@@ -76,6 +78,8 @@
                 </footer>
             </div>
         </div>
+<!--gift-loyalty dialog modal-->
+<div data-bind="template: {name: 'gift-loyalty/dialogwindow/dialogwindow-large'}"></div>
 </script>
 
 <div id="templateWrapper" class="templateArea" data-bind="template: {name: $root.medium() ? 'md_lg_xl_template' : 'sm_template'}"></div>
