--- a/OracleJETApplication/templates/gift-loyalty/profile/profile-large.tmpl.html
+++ b/OracleJETApplication/templates/gift-loyalty/profile/profile-large.tmpl.html
@@ -1,7 +1,5 @@
 <div class="tbd">Content TBD
-        <div data-bind="text: $parent.region"></div>
-        <div data-bind="text: $parent.locID"></div>
-        <div data-bind="text: $parent.storeName"></div>
+<a data-bind="click: function(){$parent.handleOpen('#giftLoyaltyDialogWindow')}" style="line-height:39px;">edit <i class="fa fa-pencil-square-o"></i></a>
         
                 
 
