--- a/OracleJETApplication/templates/gift-loyalty/profile/profile-small.tmpl.html
+++ b/OracleJETApplication/templates/gift-loyalty/profile/profile-small.tmpl.html
@@ -1,3 +1,4 @@
 <div class="tbd">Content TBD
      -small
+     <a data-bind="click: function(){$parent.handleOpen('#giftLoyaltyDialogWindow')}" style="line-height:39px;">edit <i class="fa fa-pencil-square-o"></i></a>
 </div>
