--- a/OracleJETApplication/templates/home.tmpl.html
+++ b/OracleJETApplication/templates/home.tmpl.html
@@ -6,6 +6,7 @@
     <div class="oj-row">
         <div class="oj-sm-12 oj-col">
             <div id="homeSection" class="oj-panel tab-content">
+            <a data-bind="click: function(){$parent.handleOpen('#homeDialogWindow')}" style="line-height:39px;">edit <i class="fa fa-pencil-square-o"></i></a>
 
             </div>
         </div>
@@ -21,6 +22,8 @@
         </div>
     </div>
 </div>
+<!--home dialog modal-->
+<div data-bind="template: {name: 'home/dialogwindow/dialogwindow-small'}"></div>
 </script>
 
 <!-- large template -->
@@ -29,13 +32,14 @@
         <div id="homeSection" class="oj-col oj-med-12 oj-lg-12 oj-xl-12 page-header">
             <h1>
                 <span data-bind="text: pageHeading"></span>
-                <div id="city" data-bind="text: $root.globalstoreName ? $root.globalstoreName : $parent.storeName"></div>
             </h1>
         </div>
 
     </div>
     <div id="homeTabWrapper" class="oj-md-12 oj-col">
         <div class="oj-panel tab-content">
+            -large
+            <a data-bind="click: function(){$parent.handleOpen('#homeDialogWindow')}" style="line-height:39px;">edit <i class="fa fa-pencil-square-o"></i></a>
 
         </div>
     </div>
@@ -46,6 +50,8 @@
             </footer>
         </div>
     </div>
+<!--home dialog modal-->
+<div data-bind="template: {name: 'home/dialogwindow/dialogwindow-large'}"></div>
 </script>
 
 
