--- a/OracleJETApplication/templates/inventory/overview/overview-large.tmpl.html
+++ b/OracleJETApplication/templates/inventory/overview/overview-large.tmpl.html
@@ -1,6 +1,4 @@
 <div class="tbd">Content TBD
      -large
-        <div data-bind="text: $parent.region"></div>
-        <div data-bind="text: $parent.locID"></div>
-        <div data-bind="text: $parent.storeName"></div>
+<a data-bind="click: function(){$parent.handleOpen('#inventoryDialogWindow')}" style="line-height:39px;">edit <i class="fa fa-pencil-square-o"></i></a>
 </div>
