--- a/OracleJETApplication/templates/profile/jobs-compensation/jobs-compensation-large.tmpl.html
+++ b/OracleJETApplication/templates/profile/jobs-compensation/jobs-compensation-large.tmpl.html
@@ -1,25 +1,20 @@
 <div class="justifyCenter">
-    <div id="personaldetails" class="oj-row" style="margin-bottom:26px;">
-        <div class="oj-col oj-md-2 oj-lg-2 demo-employee-photo-person-detail">
-            <img data-bind="attr: {src: $parent.getPhoto($parent.personProfile().empId)}" />
-        </div>
-        <div class="oj-col oj-md-4 oj-lg-4" style="margin-top: 10px;">
-            <div data-bind="text: $parent.personProfile().firstName + ' ' + $parent.personProfile().lastName"></div>
-            <div data-bind="text: $parent.personProfile().title"></div>
-            <div data-bind="text: $parent.personProfile().deptName"></div>
-        </div>
-        <div class="oj-col oj-md-4 oj-lg-4" style="margin-top: 10px;">
-            <div>
-                <div data-bind="text: $parent.personProfile().phone"></div>
-            </div>
-            <div>
-                <div data-bind="text: $parent.personProfile().mobile"></div>
-            </div>
-            <div>
-                <div>
-                    <a data-bind="attr:{href: $parent.getEmail($data)}, text: $parent.personProfile().email+'@example.net'"></a>
-                </div>
-            </div>
+    <div class="oj-flex">
+        <div class="oj-md-12 oj-flex-item">
+            <!-- ko foreach: $parent.compensation -->
+            <div data-bind="text: jobcodename"></div>
+            <!--/ko-->
+            
+<ul id="listview" aria-label="list using array" contextmenu="menu1" 
+       data-bind="ojComponent: {component: 'ojListView', data: $parent.dataListSource, item: {template: 'server_template'}, selectionMode: 'single'}">
+</ul>
         </div>
     </div>
 </div>
+<script type="text/html" id="server_template">
+    <li data-bind="attr: {id: $data['id']}">
+        <div class="oj-flex row">
+            <div data-bind="text: jobcodename"></div>
+        </div>
+    </li>
+</script>
