updated a few files to show updated employee data

--- a/OracleJETApplication/scss/oj-override.scss
+++ b/OracleJETApplication/scss/oj-override.scss
@@ -2372,6 +2372,8 @@ footer{
             border-radius: 0;
                 .fa{
                     color: $headerScopebutton;
+                    height: 22px;
+                    width:20px;
                 }
         }
     }
