--- a/OracleJETApplication-V-2/css/oj-override.css
+++ b/OracleJETApplication-V-2/css/oj-override.css
@@ -320,6 +320,14 @@ html:not([dir="rtl"]) .oj-dialog-title {
     #appHeaderDesktopNav .oj-navigationlist-item.oj-selected#people a .topNavImgIcon, #appHeaderDesktopNav .oj-navigationlist-item.oj-hover:not(.oj-selected)#people a .topNavImgIcon, #appHeaderMobileNav .oj-navigationlist-item.oj-selected#people a .topNavImgIcon, #appHeaderMobileNav .oj-navigationlist-item.oj-hover:not(.oj-selected)#people a .topNavImgIcon {
       background-image: url("images/icon/people-hover.png"); }
 
+#appDrawer {
+  background-color: #454545;
+  width: 200px;
+  outline-color: transparent; }
+  #appDrawer .oj-navigationlist-element .oj-default .oj-navigationlist-item-label {
+    color: #fff;
+    font-weight: 300; }
+
 /*Page Tabs*/
 .oj-navigationlist-page-level.oj-navigationlist-vertical:not(.oj-navigationlist-icon-only) .oj-navigationlist-item:not(.oj-disabled) a.oj-navigationlist-item-content .oj-navigationlist-item-label {
   color: #fff; }
@@ -536,6 +544,9 @@ html:not([dir="rtl"]) .oj-dialog-title {
   .oj-dialog-header h2 {
     padding: 0;
     margin: 5px 10px 0 10px; } }
+.hamburger {
+  margin-top: 4px; }
+
 @media only screen and (min-width: 1024px) {
   .oj-web-applayout-footer {
     border: 1px solid #d2d2d2;
@@ -641,3 +652,198 @@ html:not([dir="rtl"]) .oj-dialog-title {
       background-color: #454545; }
     #peopleTabs .oj-navigationlist-item:not(.oj-disabled).oj-hover {
       background-color: #454545; } }
+#loginPage * {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box; }
+#loginPage a:visited {
+  text-decoration: none;
+  color: #0572ce; }
+#loginPage a:link {
+  color: #0572ce;
+  text-decoration: none; }
+#loginPage a.buttonclass {
+  display: inline-block;
+  padding: 10px 0;
+  margin: 5px 0;
+  height: 40px;
+  width: 100%;
+  min-width: 100px !important;
+  font-family: Helvetica Neue, helvetica, arial, sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  background-color: #e4e8ea;
+  border: 1px solid #c4ced7;
+  border-radius: 2px;
+  text-align: center; }
+#loginPage a.btn_primary {
+  color: #fff;
+  background-color: #0572ce; }
+#loginPage h1 {
+  margin: 0px;
+  font-family: Helvetica Neue Bold, sans-serif;
+  font-size: 17px;
+  line-height: 17px;
+  font-weight: 600;
+  letter-spacing: 1px; }
+#loginPage h2 {
+  display: none; }
+#loginPage .topbackground {
+  height: 165px;
+  background-color: #f7f7f7;
+  padding-top: 15px;
+  border-bottom: 20px solid #0572ce; }
+#loginPage .myMicrosLogo-container {
+  margin-top: -80px; }
+#loginPage .myMicrosLogo-bottom {
+  opacity: 0.7;
+  display: block;
+  margin: -119px auto 0 auto; }
+#loginPage .myMicrosLogo-top {
+  display: block;
+  margin: 0 auto; }
+#loginPage .container {
+  text-align: center; }
+#loginPage .formcontainer {
+  padding: 10px; }
+#loginPage .logo_container {
+  font-family: Helvetica Neue Light;
+  font-size: 20px;
+  font-weight: 500; }
+#loginPage .logo {
+  vertical-align: baseline;
+  max-width: 115px; }
+#loginPage .textlg {
+  font-family: Helvetica Neue Light;
+  font-size: 15px;
+  color: #666;
+  font-weight: 400; }
+#loginPage #messagesDivId {
+  display: none; }
+#loginPage #loginFrom input {
+  height: 30px;
+  width: 100%;
+  margin: 7px 0;
+  font-size: 16px;
+  padding: 5px; }
+#loginPage .fgp-container {
+  text-align: left; }
+#loginPage .footer {
+  display: block;
+  padding: 10px;
+  margin-right: auto;
+  margin-bottom: 50px;
+  margin-left: auto;
+  text-align: left; }
+#loginPage .icon {
+  vertical-align: middle;
+  border: none;
+  margin: 0 3px; }
+#loginPage .hr {
+  width: 100%;
+  height: 1px;
+  background-color: #d5d5d7;
+  margin-top: 15px;
+  margin-bottom: 15px; }
+#loginPage .lowerbar {
+  display: none; }
+@media only screen and (min-width: 768px) {
+  #loginPage .container {
+    margin: 0 auto;
+    width: 85%;
+    max-width: 960px;
+    text-align: left; }
+  #loginPage .body-container, #loginPage .desktopLogo {
+    float: left;
+    width: 50%;
+    display: block; }
+  #loginPage a.btn_primary {
+    max-width: 150px; }
+  #loginPage .textlg {
+    font-size: 20px;
+    color: #fff;
+    padding-top: 40px; }
+  #loginPage h1 {
+    margin-top: 0px;
+    margin-bottom: 10px;
+    font-family: Helvetica Neue Light;
+    font-size: 24px;
+    line-height: 44px;
+    font-weight: 600;
+    letter-spacing: 1px; }
+  #loginPage h2 {
+    display: block;
+    font-family: Helvetica Neue Light;
+    font-size: 18px;
+    line-height: 36px;
+    font-weight: 600;
+    text-transform: uppercase; }
+  #loginPage .myMicrosLogo-container {
+    display: none; }
+  #loginPage .logo_container {
+    font-size: 20px; }
+  #loginPage .logo {
+    max-width: 190px; }
+  #loginPage #messagesDivId {
+    display: block;
+    color: red;
+    font-weight: bold; }
+  #loginPage .formcontainer {
+    padding: 0px;
+    margin-top: 45px; }
+  #loginPage #loginFrom {
+    max-width: 300px; }
+  #loginPage .lowerbar {
+    border-bottom: 54px solid #0572ce;
+    height: 322px;
+    position: absolute;
+    width: 100%;
+    z-index: -1;
+    display: block;
+    background-color: #f7f7f7; }
+  #loginPage .topbackground {
+    border-bottom: 0;
+    background-color: transparent;
+    height: auto;
+    margin-top: 90px; }
+  #loginPage .circle_1 {
+    position: relative;
+    z-index: 2;
+    width: 256px;
+    height: 256px;
+    margin-top: 100px;
+    background-color: white;
+    background-image: url("images/icon.png");
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+    -moz-border-radius: 50%;
+    -webkit-border-radius: 50%;
+    border-radius: 50%; }
+  #loginPage .circle_2 {
+    position: relative;
+    z-index: 1;
+    width: 265px;
+    height: 265px;
+    margin-top: -200px;
+    margin-left: 20px;
+    background-color: #c5d9ee;
+    opacity: 0.5;
+    -moz-border-radius: 50%;
+    -webkit-border-radius: 50%;
+    border-radius: 50%; }
+  #loginPage .circle_3 {
+    position: relative;
+    z-index: -1;
+    width: 207px;
+    height: 207px;
+    margin-top: -234px;
+    margin-left: -37px;
+    background-color: #c5d9ee;
+    opacity: 0.75;
+    -moz-border-radius: 50%;
+    -webkit-border-radius: 50%;
+    border-radius: 50%; }
+  #loginPage .footer {
+    text-align: right; } }
+
+/*# sourceMappingURL=oj-override.css.map */
