--- a/OracleJETApplication-V-2/views/gift-loyalty/dialogwindow/dialogwindow-small.tmpl.html
+++ b/OracleJETApplication-V-2/views/gift-loyalty/dialogwindow/dialogwindow-small.tmpl.html
@@ -3,7 +3,7 @@
             resizeBehavior: 'none',
             dragAffordance: 'none',
             initialVisibility: 'hide', 
-            rootAttributes: {style: 'width: 375px; height: 600px;'}, 
+            rootAttributes: {style: 'width: 100%; height: 667px;'},
             'position': {'at': 'top'}}">
      <!-- Note: the user must provide the aria-labelledby attribute for the dialog to be accessible -->
     <div class="oj-dialog-header oj-helper-clearfix" aria-labelledby="dialogTitleId">
